--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,15 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     tools:context=".ui.home.HomeFragment">
 
-    <androidx.fragment.app.FragmentContainerView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/cardListFragment"
-        android:name="com.example.yugiohdeck.CardListFragment"
-        tools:layout="@layout/card_item_list">
+        android:orientation="vertical">
 
-    </androidx.fragment.app.FragmentContainerView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/searchEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:minHeight="60dp"
+                android:text="Name" />
+
+            <Button
+                android:id="@+id/searchButton"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:insetTop="0dp"
+                android:insetBottom="8dp"
+                android:minWidth="0dp"
+                app:icon="?android:attr/actionModeWebSearchDrawable"
+                app:iconPadding="0dp" />
+        </LinearLayout>
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/cardListFragment"
+            android:name="com.example.yugiohdeck.CardListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout="@layout/card_item_list">
+
+        </androidx.fragment.app.FragmentContainerView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
