feat: select cards

--- a/app/src/main/res/layout/activity_new_deck.xml
+++ b/app/src/main/res/layout/activity_new_deck.xml
@@ -28,7 +28,7 @@
         android:backgroundTintMode="src_in"
         android:ems="10"
         android:inputType="textPersonName"
-        android:paddingLeft="20"
+        android:paddingLeft="20dp"
         android:text="Título"
         android:textColor="@color/cardview_dark_background"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,8 +45,8 @@
         android:backgroundTintMode="src_in"
         android:ems="10"
         android:inputType="textPersonName"
-        android:paddingLeft="20"
-        android:paddingBottom="120"
+        android:paddingLeft="20dp"
+        android:paddingBottom="120dp"
         android:text="Descrição"
         android:textAlignment="viewStart"
         android:textColor="@color/cardview_dark_background"
