--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -2,12 +2,14 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    app:cardBackgroundColor="@color/white">
 
 
     <LinearLayout
@@ -16,15 +18,15 @@
         android:orientation="horizontal">
 
         <ImageView
-                android:id="@+id/cardImageView"
-                android:layout_width="70dp"
-                android:layout_height="100dp"
-                android:layout_weight="0"
-                android:maxWidth="70dp"
-                android:maxHeight="100dp"
-                android:minWidth="70dp"
-                android:minHeight="100dp"
-                tools:srcCompat="@tools:sample/avatars" />
+            android:id="@+id/cardImageView"
+            android:layout_width="70dp"
+            android:layout_height="100dp"
+            android:layout_weight="0"
+            android:maxWidth="70dp"
+            android:maxHeight="100dp"
+            android:minWidth="70dp"
+            android:minHeight="100dp"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <LinearLayout
             android:layout_width="match_parent"
