add open camera

--- a/app/src/main/res/layout/activity_new_deck.xml
+++ b/app/src/main/res/layout/activity_new_deck.xml
@@ -28,7 +28,7 @@
         android:backgroundTintMode="src_in"
         android:ems="10"
         android:inputType="textPersonName"
-        android:paddingLeft="20"
+        android:paddingLeft="20dp"
         android:text="Título"
         android:textColor="@color/cardview_dark_background"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,8 +45,8 @@
         android:backgroundTintMode="src_in"
         android:ems="10"
         android:inputType="textPersonName"
-        android:paddingLeft="20"
-        android:paddingBottom="120"
+        android:paddingLeft="20dp"
+        android:paddingBottom="120dp"
         android:text="Descrição"
         android:textAlignment="viewStart"
         android:textColor="@color/cardview_dark_background"
@@ -58,12 +58,14 @@
         android:id="@+id/fabAddDeck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="311dp"
         android:layout_marginEnd="44dp"
         android:layout_marginBottom="25dp"
         android:clickable="true"
         app:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
         app:layout_constraintVertical_bias="0.92"
         app:srcCompat="@android:drawable/ic_menu_edit" />
