feat: deck spinner list

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -15,7 +15,7 @@
         android:textSize="24sp" />
 
     <Spinner
-        android:id="@+id/spinner1"
+        android:id="@+id/deckDropDownList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:drawable/btn_dropdown"
