--- a/app/src/main/res/layout/deck_list_item.xml
+++ b/app/src/main/res/layout/deck_list_item.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardImage"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_width="70dp"
+    android:layout_height="100dp"
+    android:orientation="horizontal"
+    app:layout_maxHeight="250dp">
 
     <ImageView
         android:id="@+id/cardImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0"
         app:srcCompat="@drawable/back" />
 </LinearLayout>
