--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,33 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.dashboard.DashboardFragment">
+    tools:context=".ui.dashboard.DashboardFragment"
+    android:paddingBottom="?attr/actionBarSize">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Deck List"
-        android:textSize="24sp" />
-
-    <Spinner
-        android:id="@+id/deckDropDownList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/btn_dropdown"
-        android:spinnerMode="dropdown" />
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/deckListFragment"
-        android:name="com.example.yugiohdeck.DeckListFragment"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/deck_list_item">
+        android:orientation="vertical">
 
-    </androidx.fragment.app.FragmentContainerView>
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Deck List"
+            android:textSize="24sp" />
 
-</LinearLayout>
+        <Spinner
+            android:id="@+id/deckDropDownList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/deckListFragment"
+            android:name="com.example.yugiohdeck.DeckListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout="@layout/deck_list_item">
+
+        </androidx.fragment.app.FragmentContainerView>
+
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/newDeckButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:fabCustomSize="50dp"
+        android:layout_gravity="bottom|right"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="30dp"
+        android:layout_weight="1"
+        android:clickable="true"
+        android:foregroundGravity="center"
+        app:layout_constraintVertical_bias="0.92"
+        android:src="@android:drawable/ic_input_add"
+        app:backgroundTint="@color/white"
+        />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
