--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.dashboard.DashboardFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nameCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Deck List"
