--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,8 +20,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/startButton"
@@ -32,6 +31,8 @@
         android:layout_marginTop="174dp"
         android:layout_marginEnd="85dp"
         android:layout_marginBottom="82dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
         android:text="Iniciar"
         android:textColor="#FFFFFF"
         android:textSize="50sp"
