--- a/app/src/main/res/layout/activity_new_deck.xml
+++ b/app/src/main/res/layout/activity_new_deck.xml
@@ -28,9 +28,9 @@
         android:backgroundTint="@color/cardview_light_background"
         android:backgroundTintMode="src_in"
         android:ems="10"
+        android:hint="Título"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
-        android:text="Título"
         android:textColor="@color/cardview_dark_background" />
 
     <EditText
@@ -44,10 +44,10 @@
         android:backgroundTint="@color/cardview_light_background"
         android:backgroundTintMode="src_in"
         android:ems="10"
+        android:hint="Descrição"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:paddingBottom="120dp"
-        android:text="Descrição"
         android:textAlignment="viewStart"
         android:textColor="@color/cardview_dark_background" />
 
