--- a/app/src/main/res/layout/deck_list_item.xml
+++ b/app/src/main/res/layout/deck_list_item.xml
@@ -4,6 +4,7 @@
     android:id="@+id/cardImage"
     android:layout_width="70dp"
     android:layout_height="100dp"
+    android:clickable="true"
     android:orientation="horizontal"
     app:layout_maxHeight="250dp">
 
